--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "kreait/laravel-firebase": "^6.1",
+        "firebase/php-jwt": "*",
+        "kreait/laravel-firebase": "*",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "lcobucci/jwt": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
