--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "firebase/php-jwt": "*",
-        "kreait/laravel-firebase": "*",
+        "firebase/php-jwt": "^6.11",
+        "kreait/laravel-firebase": "^6.1",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
-        "lcobucci/jwt": "*"
+        "lcobucci/jwt": "^5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
