--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.0",
         "firebase/php-jwt": "^6.11",
         "kreait/laravel-firebase": "^6.1",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "lcobucci/jwt": "^5.6"
@@ -28,6 +29,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
+          
         }
     },
     "autoload-dev": {
